Configure mfe2 as a remote

--- a/src/assets/mfe2/i18n/en.json
+++ b/src/assets/mfe2/i18n/en.json
@@ -1,5 +1,7 @@
 {
-  "HELLO": {
-    "MESSAGE": "Hi from remote  "
+  "MFE2": {
+    "HELLO": {
+      "MESSAGE": "Hi from remote MFE2 "
+    }
   }
 }
